# gpu_toy

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md
examples/4d_explorer/: quaternion.glsl
examples/backwards/: backwards.glsl  quaternion.glsl
examples/data/: Dashboard1.glsl  color_picker.glsl  sheet1.glsl  sheet2.glsl  size.glsl
examples/kifs-test/: flag.glsl  main.glsl  quaternion.glsl.bak  t copy.glsl  t.glsl.b  trans flag.glsl  tri.glsl  w.glsl
examples/test-cases/: black-left-side-and-white-right.glsl  line-from-bottom-left-to-top-right.glsl  mouse-starts-middle-and-can-follow-clicks.glsl  uv-test-negatives-are-black.glsl
examples/wolfenstein/: wolfenstein.sfml
src/lib/: clear_terminal.cpp  file_watcher.cpp  gpu_toy.cpp  live_reloading_shader.cpp  scope.cpp
src/main/: file_watcher.cpp  file_watcher.h  gpu_toy.cpp  gpu_toy.h  live_reloading_shader.cpp  live_reloading_shader.h  main.cpp  scope.h  shader_header.h
src/public/: clear_terminal.h  file_watcher.h  filesystem_include.h  gpu_toy.h  live_reloading_shader.h  scope.h  shader_header.h
src/test/: file_watcher_test.cpp  scope_test.cpp  test.cpp
